--- a/login_system/assets/css/main.css
+++ b/login_system/assets/css/main.css
@@ -57,6 +57,59 @@
 		position: absolute;
 	}
 
+	#lm{
+        
+        
+    transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+    background-color: transparent;
+    border: 0;
+    box-shadow: inset 0 0 0 1px rgba(160, 160, 160, 0.5);
+    color: #3c3b3b !important;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Raleway", Helvetica, sans-serif;
+    font-size: 0.6em;
+    font-weight: 800;
+    height: 4.8125em;
+    letter-spacing: 0.25em;
+    line-height: 4.8125em;
+    padding: 0 2.5em;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+	
+	}
+
+	#lm:hover{
+
+	    background-color: lightgrey!important;
+	}
+	
+
+#mob{
+	display: none;
+}
+
+#dex{
+	display: block;
+}
+	
+	@media screen and (max-width: 1000px) 
+	{
+     #dex{
+     	display: none;
+     }
+      #mob{
+     	display: block;
+     }
+    
+}
+
+
+
+	
+
 /* Box Model */
 
 	*, *:before, *:after {
@@ -2978,7 +3031,7 @@
 		background-color: transparent;
 		border-radius: 0.375em;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #f56a6a;
+		box-shadow: inset 0 0 0 0.5px #f56a6a;
 		color: #f56a6a !important;
 		cursor: pointer;
 		display: inline-block;
@@ -3000,7 +3053,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(245, 106, 106, 0.05);
+			background-color: rgba(245, 106, 106, 0.1);
 		}
 
 		input[type="submit"]:active,
