--- a/login_system/css/sign_style.css
+++ b/login_system/css/sign_style.css
@@ -137,7 +137,7 @@ input[type="submit"]{
   padding: 0  200px;
 }
 
-body {
+body,html {
   
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -146,6 +146,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  
 }
 
 
