--- a/login_system/css/update_style.css
+++ b/login_system/css/update_style.css
@@ -161,13 +161,42 @@ body {
      .inner{
       padding: 0 20px;
      }
-} 
-
-@media screen and (max-width: 800px) {
-    input[type="text"],input[type="password"],input[type="email"],textarea[type="message"] {
+      input[type="text"],input[type="password"],input[type="email"],textarea[type="message"] {
       width: 100%;
     }
+
+     #inner-input p{
+    
+    margin:0; 
+    text-align: left; 
+  }
+} 
+
+/*
+ .div{
+  padding:10px 10px;
+  background:#00ad2d;
+  border:1px solid #00ad2d;
+  position:relative;
+  color:#fff;
+  border-radius:2px;
+  text-align:center;
+  float:left;
+  cursor:pointer
 }
+.hide_file {
+    position: absolute;
+    top: 0;
+    z-index: 1000;
+    opacity: 0;
+    cursor: pointer;
+    right: 0;
+    top: 0;
+    height: 100%;
+    font-size: 24px;
+    width: 100%;
+}
+*/
 
 
 
