--- a/login_system/css/sign_style.css
+++ b/login_system/css/sign_style.css
@@ -23,6 +23,7 @@
   border-bottom-left-radius: 100%;
   border-bottom-right-radius: 100%;
   box-sizing: border-box;
+  text-align: center;
 }
 .form .thumbnail img {
   display: block;
@@ -147,6 +148,41 @@ body,html {
   width: 100%;
   height: 100%;
   
+}
+
+
+
+#a{
+    color: #EF3B3A;
+    text-decoration: none;
+    font-size: 15px;
+  }
+
+  a{
+    text-decoration: none;
+    color: red;
+
+  }
+
+ 
+ .clearfix::before {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+ #hom{
+  padding: 0 0 20px 0;
+  text-align: left;
+    font-size: 30px;
+  
+ }
+
+.right{
+   right: 20px;
+   position: absolute;
+   font-size: 30px!important;
 }
 
 
