--- a/login_system/css/update_style.css
+++ b/login_system/css/update_style.css
@@ -200,3 +200,35 @@ body {
 
 
 
+#a{
+    color: #EF3B3A;
+    text-decoration: none;
+    font-size: 15px;
+  }
+
+  a{
+    text-decoration: none;
+    color: red;
+
+  }
+
+ 
+ .clearfix::before {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+ #hom{
+  padding: 0 0 20px 0;
+  text-align: left;
+    font-size: 30px;
+  
+ }
+
+.right{
+   right: 20px;
+   position: absolute;
+   font-size: 30px!important;
+}
